Try to fix long press issue on iOS

--- a/viz/src/styles.css
+++ b/viz/src/styles.css
@@ -9,6 +9,21 @@
 
 #canvas {
   aspect-ratio: 16 / 9;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+#canvasDiv {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .plotters {
